src/BadLang/Tests/BadC.Tests/tests/failing/ParseException/InvalidReturnVoid.basm

.code code code_raw BadC
{
	void __main__() : export
	{
		halt;
	}

	void Test()
	{
		return 0;
	}
}